<resources>
    <string name="app_name">Dive</string>
    <string name="act_playing_now">Playing Now</string>
    <string name="act_discover">Discover</string>
    <string name="act_library">Library</string>
    <string name="act_playlists">Playlists</string>
    <string name="main_username">Username</string>
    <string name="main_password">Password</string>
    <string name="main_login">Login</string>
    <string name="main_signup">Sign Up</string>
    <string name="list_row_title">Title</string>
    <string name="list_row_subtitle">Subtitle</string>
    <string name="text_view_main">This is a playlist based music app that will play songs of a certain type in anti-chronological order. The login activity will check the user name and password in a database on a server. The artwork of the current song will always be displayed as a blurred background.</string>
    <string name="text_view_discover">The discover activity will connect the user via playlists created by other users. All playlists have music played anti-chronologically.</string>
    <string name="text_view_library">This is all the library songs are saved. Only songs that are in the library can be played outside of a playlist.</string>
    <string name="text_view_playing_now">Playing now will access MediaPlayer to play songs from the last.fm database. There will be a slider to switch between songs with a scale up and center effect. In the bottom menu discover music, playlists, play now, add playlist and library can be accessed. On top, there will be a button for settings, download and search.</string>
    <string name="text_view_playlists">The user can create his own playlist by mix and matching the songs in his library. All playlists are publicly shared.</string>
    <string-array name="discover_title">
        <item>Underground: Lo-Fi, Noise Pop</item>
        <item>Surf Pop - Slacker Pop</item>
        <item>Urban Nights</item>
        <item>Soul Music</item>
        <item>MTV\'s 120 Minutes</item>
        <item>Calm Vibes</item>
        <item>Around The World in 80 Songs</item>
        <item>Please Don\'t Call It Jazz</item>
        <item>50 Greatest Punk Anthems</item>
        <item>ALLternative Shuffle</item>
        <item>Forgotten Rock Classics</item>
        <item>When MTV Was Good</item>
    </string-array>
    <string-array name="discover_subtitle">
        <item>Sounds in underground indie</item>
        <item>Daydream music</item>
        <item>The streets at night</item>
        <item>The origins of soul music</item>
        <item>MTV past hits</item>
        <item>Relax your way into a peaceful moment</item>
        <item>Taking a trip around the world in 80 songs</item>
        <item>Forget the label. This is just good music</item>
        <item>A playlist of the best punk anthems </item>
        <item>Take a trip through alternative music</item>
        <item>Great rock classics that deserve more plays</item>
        <item>Best of pop, boy and girl bands</item>
    </string-array>
    <string-array name="library_title">
        <item>When the Whip Comes Down</item>
        <item>Spread Your Wings</item>
        <item>Word on a Wing</item>
        <item>Welcome to the Machine</item>
        <item>Soldier of Fortune</item>
        <item>Over the Hills and Far Away</item>
        <item>The Poet and the Painter</item>
        <item>My Friend</item>
        <item>It\'s a Long Road</item>
        <item>We Can Be Together</item>
        <item>Mother Nature\'s Son</item>
        <item>Love Me Two Times</item>
    </string-array>
    <string-array name="library_subtitle">
        <item>Rolling Stones - Some Girls</item>
        <item>Queen - News Of The World</item>
        <item>David Bowie - Station To Station</item>
        <item>Pink Floyd - Wish You Were Here</item>
        <item>Deep Purple - Stormbringer</item>
        <item>Led Zeppelin - Houses of the Holy</item>
        <item>Jethro Tull - Thick as a Brick</item>
        <item>Jimy Hendrix - The Cry of Love</item>
        <item>Supertramp - Supertramp</item>
        <item>Jefferson Airplane - Volunteers</item>
        <item>Beatles - The White Album</item>
        <item>The Doors - Strange Days</item>
    </string-array>
    <string-array name="playlists_title">
        <item>Beatle Mania</item>
        <item>Rock Journey</item>
        <item>Create a Playlist</item>
    </string-array>
    <string-array name="playlists_subtitle">
        <item>The best of Beatles</item>
        <item>A history of Rock music</item>
        <item>Add songs that play chronologically</item>
    </string-array>
</resources>
