<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main_activity"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.example.android.musicapp.MainActivity"
    tools:ignore="ContentDescription">

    <ImageView
        android:layout_width="160dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/dive" />

    <ImageView
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:src="@drawable/logo" />

    <EditText
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_fill"
        android:gravity="center"
        android:hint="@string/main_username"
        android:inputType="textCapWords"
        android:textColor="#80011627" />

    <EditText
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:background="@drawable/button_fill"
        android:gravity="center"
        android:hint="@string/main_password"
        android:inputType="textCapWords"
        android:textColor="#80011627" />

    <TextView
        android:id="@+id/main_text"
        style="@style/Text"
        android:text="@string/text_view_main"/>

    <Button
        android:id="@+id/main_login"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:background="@drawable/button_login"
        android:text="@string/main_login"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:textSize="22sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/main_signup"
        android:textColor="@color/colorAccent" />

</LinearLayout>
